--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -23,7 +23,7 @@ table#medialist .thumbnail .lightbox {
 
 table#medialist .thumbnail:hover .lightbox {
     display: block;
-    z-index: 50;
+    z-index: 2500;
 }
 
 
